<resources>
    <string name="app_name">Guurd AutoZone Demo</string>
    <string name="open_serial_fail">打开串口失败！</string>
    <string name="isopenGpio">正在上电。。。</string>
    <string name="bankcard">银行卡</string>
    <string name="ordercard">定制卡</string>
    <string name="progcard">工程卡</string>
    <string name="getCardInfo">获取卡片信息</string>
    <string name="getCardInfoSuccess">获取卡片信息成功</string>
    <string name="getCardInfoFail">获取卡片信息失败</string>
    <string name="upGpioSuccess">上电成功！</string>
    <string name="inputOperation">输入操作指令</string>
    <string name="sendInstructuin">发送指令</string>
    <string name="resetICCard">复位IC卡</string>
    <string name="deleteFile">删除文件</string>
    <string name="newMasterDir">新建主目录</string>
    <string name="newSubDir">新建子目录</string>
    <string name="newFolder">新建文件夹</string>
    <string name="selectedFile">选文件</string>
    <string name="readFile">读文件</string>
    <string name="writeFile">写文件</string>
    <string name="pleaseWriteData">请写数据</string>
    <string name="readData">读数据</string>
    <string name="continuReset">连续复位</string>
    <string name="success">成功：</string>
    <string name="fails">失败：</string>
    <string name="printerSettings">打印机参数设置</string>
    <string name="higher">倍高</string>
    <string name="widther">倍宽</string>
    <string name="Bold">加粗</string>
    <string name="Underline">下划线</string>
    <string name="align">对齐方式：</string>
    <string name="barcodeSetting">一维条码打印</string>
    <string-array name="barcodeType">
        <item>UPCA</item>
        <item>UPCE</item>
        <item>CODE93</item>
        <item>Code128</item>
        <item>ITF14</item>
        <item>EAN13/EAN8</item>
        <item>CODE39</item>
    </string-array>
    <string name="print">打印</string>
    <string name="pleaseEnterBarCode">请输入打印的条码</string>
    <string name="qrcodeSetting">二维条码打印</string>
    <string-array name="qrcodeType">
        <item>QR</item>
        <item>matrix</item>
    </string-array>
    <string name="pleaseEnterQRCode">请输入打印的二维码</string>
    <string name="printFlashPic">打印Flash图片</string>
    <string name="printPic">打印图片</string>
    <string name="pleaseEnter">请输入打印的内容</string>
    <string name="noData">没有数据</string>
    <string name="twoTrackData">二轨数据：</string>
    <string name="threeTrackData">三轨数据：</string>
    <string name="readFailure">读取失败</string>
    <string-array name="features">
        <item>指纹</item>
        <item>条码</item>
        <item>超高频</item>
        <item>接触式CPU卡</item>
        <item>非接触式CPU卡</item>
        <item>打印机</item>
        <item>磁条卡</item>
    </string-array>
    <string-array name="ic_cmd_value">
        <item>请选择IC卡操作指令</item>
        <item>删除文件</item>
        <item>建立 MF</item>
        <item>结束建立MF</item>
        <item>建立 DF</item>
        <item>结束建立 DF</item>
        <item>建立二进制</item>
        <item>选择二进制文件</item>
        <item>读二进制文件</item>
        <item>写二进制文件</item>
        <item>选中PBOC主目录</item>
        <item>获取随机数</item>
    </string-array>
    <string name="feature_settings">功能设置</string>
    <string name="check_version">检测版本</string>
    <string name="strApkVersion">apk版本：</string>
    <string name="strStmVersion">stm32版本：</string>
    <string name="str32550">32550版本：</string>
    <string name="baudrate">波特率：</string>
    <string name="fingerprint">指纹</string>
    <string name="loop_read">循环读取</string>
    <string name="barcode">Bar Code</string>
    <string name="rfid">RFID</string>
    <string name="pin">身份证</string>
    <string name="beidou">北斗</string>
    <string name="exit_toast">再按一次退出程序</string>
    <string name="read_sfz">Reader</string>
    <string name="sequential_sfz">Continuous reader</string>
    <string name="stop">Stop</string>
    <string name="clear_sfz">Clear</string>
    <string name="read_card_fail">Did not find a card</string>
    <string name="read_card_success">Successful reader</string>
    <string name="start_control_command">启动控制命令</string>
    <string name="mode_switch_command">模式切换命令</string>
    <string name="statement_frequency_command">语句及其频度控制命令</string>
    <string name="print_finger">请按指纹！</string>
    <string name="print_finger_again">请再次按指纹！</string>
    <string name="processing">指纹采集成功，正在上传处理...</string>
    <string name="generate_char_fail">生成特征值失败！</string>
    <string name="reg_model_success">合成模板成功！</string>
    <string name="reg_model_fail">合成模板失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="verifying_wait">正在验证，请稍后...</string>
    <string name="down_char_fail">验证失败</string>
    <string name="verifying_through">验证通过</string>
    <string name="verifying_fail">验证失败</string>
    <string name="up_image_success">上传指纹图像成功</string>
    <string name="up_image_fail">上传指纹图像失败</string>
    <string-array name="fingerprint_size">
        <item>小指纹</item>
        <item>大指纹</item>
    </string-array>
    <string name="card_number">卡号</string>
    <string name="read_card">读卡</string>
    <string name="write_card">写卡</string>
    <string name="write_password">密码：</string>
    <string name="update_password">修改密码</string>
    <string name="write_block_num">写入块号：</string>
    <string name="write_data">写入数据：</string>
    <string name="read_block_num">读入块号：</string>
    <string name="read_data">读入数据：</string>
    <string name="getcard_wait">正在获取卡号，请稍后...</string>
    <string name="updatepwding_wait">正在修改密码，请稍后...</string>
    <string name="writing_wait">正在写卡，请稍后...</string>
    <string name="reading_wait">正在读卡，请稍后...</string>
    <string name="writing_success">写卡成功</string>
    <string name="writing_fail">写卡失败</string>
    <string name="reading_success">读卡成功</string>
    <string name="reading_fail">读卡失败</string>
    <string name="card_to_area">请将卡放入读卡区</string>
    <string name="first_card">请先读卡，再验证指纹！</string>
    <string name="back">back</string>
    <string name="register_fingerprint">注册指纹</string>
    <string name="validate_fingerprint">验证指纹</string>
    <string name="clear_flash">清空指纹库</string>
    <string name="calibration">校准</string>
    <string name="calibration_success">校准成功</string>
    <string name="calibration_fail">校准失败</string>
    <string name="clear_flash_success">清空指纹库成功</string>
    <string name="clear_flash_fail">清空指纹库失败</string>
    <string name="first_register">请先注册指纹！</string>
    <string name="no_card_with_data">未寻到卡,有返回数据</string>
    <string name="no_card_without_data">未寻到卡,无返回数据，超时！！</string>
    <string name="find_card_exception">可能是串口打开失败或其他异常</string>
    <string name="write_data_toast">写入数据和块号不能为空</string>
    <string name="write_toast">写入时 块号、数据不能为空</string>
    <string name="read_toast">读入 时块号不能为空</string>
    <string name="open_success">open bar code success</string>
    <string name="open_fail">open bar code fail</string>
    <string name="close_success">close bar code success</string>
    <string name="close_fail">close bar code fail</string>
    <string name="scan">扫码</string>
    <string name="scan_parameter">Scan Configuration Parameter</string>
    <string name="close_scan">close</string>
    <string name="setting">设置</string>
    <string name="not_init">Not initialized!</string>
    <string name="not_open">Not open!</string>
    <string name="open_sanner">Is opening the scanner</string>
    <string name="setHost">setHost</string>
    <string name="packetformat">packetformat</string>
    <string name="startdecode">startdecode</string>
    <string name="ack">ACK</string>
    <string name="nak">NAK</string>
    <string name="prepare_dialog">正在准备，请稍候...</string>
    <string name="decode_fail">解码失败</string>
    <string name="enable">enable</string>
    <string name="disable">disable</string>
    <string name="restore">Set Factory Defaults</string>
    <string name="set_host">Set Host</string>
    <string name="disable_all_symbologies">Disable All Symbologies</string>
    <string name="one_d_symbologies">1D Symbologies</string>
    <string name="upc_a_text">UPC-A</string>
    <string name="upc_e_text">UPC-E</string>
    <string name="upc_e1_text">UPC-E1</string>
    <string name="ean_8_jan_8_text">EAN-8/JAN-8</string>
    <string name="ean_13_jan_13_text">EAN-13/JAN-13</string>
    <string name="bookland_ean_text">Bookland EAN</string>
    <string name="bookland_isbn_format_text">Bookland ISBN Format</string>
    <string name="enable_isbn_10">Bookland ISBN-10</string>
    <string name="enable_isbn_13">Bookland ISBN-13</string>
    <string name="ucc_coupon_extended_code_text">UCC COUPON EXTENDED CODE</string>
    <string name="issn_ean_text">ISSN EAN</string>
    <string name="code_128_text">Code 128</string>
    <string name="gs1_128_text">GS1-128 (formerly UCC/EAN-128)</string>
    <string name="isbt_128_text">ISBT 128</string>
    <string name="code_39_text">Code 39</string>
    <string name="trioptic_code_39_text">Trioptic Code 39</string>
    <string name="code_93_text">Code 93</string>
    <string name="code_11_text">Code 11</string>
    <string name="itf_text">Interleaved 2 of 5</string>
    <string name="dtf_text">Discrete 2 of 5</string>
    <string name="codabar_text">Codabar</string>
    <string name="msi_text">MSI</string>
    <string name="ctf_text">Chinese 2 of 5</string>
    <string name="mtf_text">Matrix 2 of 5</string>
    <string name="ktf_text">Korean 3 of 5</string>
    <string name="inverse_1d_text">Inverse 1D</string>
    <string name="regular">Regular</string>
    <string name="inverse_only">Inverse Only</string>
    <string name="inverse_autodetect">Inverse Autodetect</string>
    <string name="two_d_symbologies">2D Symbologies</string>
    <string name="pdf417_text">PDF417</string>
    <string name="micro_pdf417_text">MicroPDF417</string>
    <string name="code_128_emulation_text">Code 128 Emulation</string>
    <string name="data_matrix">Data Matrix</string>
    <string name="data_matrix_inverse_text">Data Matrix Inverse</string>
    <string name="decode_mirror_images_text">Decode Mirror Images (Data Matrix Only)</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="auto">Auto</string>
    <string name="maxicode_text">Maxicode</string>
    <string name="qr_code_text">QR Code</string>
    <string name="qr_inverse_text">QR Inverse</string>
    <string name="micro_qr_text">MicroQR</string>
    <string name="aztec_text">Aztec</string>
    <string name="aztec_inverse_text">Aztec Inverse</string>
    <string name="hanxin_text">Han Xin</string>
    <string name="postal_codes">Postal Codes</string>
    <string name="us_postnet_text">US Postnet</string>
    <string name="us_planet_text">US Planet</string>
    <string name="uk_postal_text">UK Postal</string>
    <string name="japan_postal_text">Japan Postal</string>
    <string name="australia_post_text">Australia Post</string>
    <string name="netherlands_kix_code_text">Netherlands KIX Code</string>
    <string name="usps_4cb_one_code_intelligent_mail_text">USPS 4CB/One Code/Intelligent Mail</string>
    <string name="upu_fics_postal_text">UPU FICS Postal</string>
    <string name="set_success">Set successfully</string>
    <string name="set_fail">Failed to set</string>
    <string name="init">初始化</string>
    <string name="find">寻卡</string>
    <string name="read_15693">读卡</string>
    <string name="write_15693">写卡</string>
    <string name="no_null_toast">数据不能为空！</string>
    <string name="init_success">初始化成功</string>
    <string name="init_fail">初始化失败</string>
    <string name="find_success">寻卡成功</string>
    <string name="find_fail">寻卡失败</string>
    <string name="read_15693_success">读卡成功</string>
    <string name="read_15693_fail">读卡失败</string>
    <string name="write_15693_success">写卡成功</string>
    <string name="write_15693_fail">写卡失败</string>
    <string name="str_conn">连接设备</string>
    <string name="str_do_conn">正在连接设备，请稍后...</string>
    <string name="power">功率：</string>
    <string name="update">修改</string>
    <string name="tab_read">标签读取</string>
    <string name="button_clean">清屏</string>
</resources>