<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printerSettings"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/timesHeight_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/higher" />

                <CheckBox
                    android:id="@+id/timesWeight_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/timesHeight_check"
                    android:layout_toRightOf="@+id/timesHeight_check"
                    android:text="@string/widther" />

            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/setBold_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bold" />

                <CheckBox
                    android:id="@+id/setUnderLine_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/setBold_check"
                    android:layout_toRightOf="@+id/setBold_check"
                    android:text="@string/Underline" />
            </RelativeLayout>

            <Button
                android:id="@+id/init_printBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/init" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/align" />

            <Spinner
                android:id="@+id/alignType_check"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:entries="@array/wordAlignType" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/barcodeSetting"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcodeType" />

            <Spinner
                android:id="@+id/barcodeType_check"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:entries="@array/barcodeType" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/barcode_printBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/print" />

                <EditText
                    android:id="@+id/inputBarData_printBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/barcode_printBtn"
                    android:hint="@string/pleaseEnterBarCode"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/qrcodeSetting"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcodeType" />

            <Spinner
                android:id="@+id/qrcodeType_check"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:entries="@array/qrcodeType" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/qrcode_printBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/print" />

                <EditText
                    android:id="@+id/inputQrData_printBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/qrcode_printBtn"
                    android:hint="@string/pleaseEnterQRCode"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/printFlashPic"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/flashPic_printBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/printPic" />

                <Spinner
                    android:id="@+id/flashPicType_check"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_toLeftOf="@id/flashPic_printBtn"
                    android:entries="@array/flashPicType" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" >

                <Button
                    android:id="@+id/paperPrint_printBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/print" />

                <EditText
                    android:id="@+id/inputData_printBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/paperPrint_printBtn"
                    android:hint="@string/pleaseEnter"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>