<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical" 
        android:focusable="true" 
       	android:focusableInTouchMode="true">
        
         <EditText
              android:id="@+id/OperCmd_ICCard"
              android:layout_width="match_parent"
              android:layout_height="120dp"
              android:hint="@string/inputOperation" />

          <Button
              android:id="@+id/SendOperCmd_ICCard"
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:text="@string/sendInstructuin" 
              android:textSize="16sp"/>
          
          <Button
            android:id="@+id/ClearOrder_ICCard"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/button_clean"
            android:textSize="16sp" />
          
          <TextView
            android:id="@+id/ReturnInfo_ICCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textSize="20sp"/>
            
	</LinearLayout>

</ScrollView>